Add rest of the cars and create them in the simulation